fixed slider overflow

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -2,6 +2,7 @@
 //media queries breackpoints
 $extrasmall: 0px;
 $small: 576px;
+$smedium: 700px;
 $medium: 768px;
 $large: 992px;
 $extralarge: 1200px;
