--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/config";
 
 .überuns{
-    border: 2px var(--red) solid;
+    border: 3px var(--red) solid;
     margin: 5vh auto 0% auto;
     padding: 0px 20px 20px 20px;
     font-size: 1rem;
